--- a/eww.scss
+++ b/eww.scss
@@ -1,64 +1,3 @@
 @import "../../.cache/wal/colors.scss";
-
-$bg: $background;
-$fg: $cursor;
-
-$c1: $color5;
-$c2: $color7;
-
-.pomo_window {
-    background-color: transparent;
-    // font-family: Arcane Nine;
-    font-family: Google Sans Code Extrabold;
-    // font-weight: 600;
-    font-size: 24px;
-}
-.pomo-widget-container {
-    background-color: rgba($bg, 0.9);
-    border-radius: 86px;
-    padding-left: 20px;
-    padding-right: 20px;
-    //padding-top: 20px;
-    //padding-bottom: 20px;
-    //padding: 50px;
-}
-.pomo-timer-eventbox {
-    background-color: transparent;
-    color: rgba($c1, 0.5);
-}
-.pomo-timer-eventbox:hover {
-    background-color: transparent;
-    color: $c2;
-}
-
-.pomo-overlay-container-running {
-    color: $c2;
-}
-
-.pomo-progress {
-    color: inherit;
-    transition: color 0.14s ease-in-out
-}
-.pomo-progress-background {
-    color: rgba($c1, 0.3);
-}
-
-.pomo-timer-text {
-    font-family: Google Sans Code;
-    font-weight: 600;
-    font-size: 24px;
-    transition: color 0.14s ease-in-out
-}
-
-.pomo-clock-container {
-    color: $fg;
-    padding-top: 40px;
-}
-.pomo-clock-date-container {
-    font-family: Google Sans Code;
-    font-size: 16px;
-}
-
-/* ===========================
-Pomodoro styles - END
-=========================== */
+@import "./pomo/eww.scss";
+@import "./panel/eww.scss";
