--- a/pomo/eww.scss
+++ b/pomo/eww.scss
@@ -7,7 +7,8 @@ $c2: $color7;
 .pomo_window {
     background-color: transparent;
     // font-family: Arcane Nine;
-    font-family: Google Sans Code Extrabold;
+    font-family: Google Sans Code Semibold;
+    // font-family: Quando;
     // font-weight: 600;
     font-size: 24px;
 }
@@ -54,5 +55,6 @@ $c2: $color7;
 }
 .pomo-clock-date-container {
     font-family: Google Sans Code;
+    // font-family: Quando;
     font-size: 16px;
 }
