--- a/panel/eww.scss
+++ b/panel/eww.scss
@@ -15,7 +15,7 @@ $bga: rgba($bg, 0.9);
 
     font-family: Google Sans Code Extrabold;
     font-size: 30px;
-    color: $color3;
+    color: $color4;
 }
 
 .colorscheme-container {
@@ -32,3 +32,8 @@ $bga: rgba($bg, 0.9);
 .color-dot-6 { color: $color6; }
 .color-dot-7 { color: $color7; }
 .color-dot-8 { color: $color8; }
+
+.panel-static-text-container {
+  font-size: 50px;
+  padding-right: 10px;
+}
