--- a/panel/eww.scss
+++ b/panel/eww.scss
@@ -20,20 +20,10 @@ $bga: rgba($bg, 0.9);
 
 .colorscheme-container {
     font-size: 30px;
-    padding-right: 24px;
+    padding-left: 18px;
+    padding-right: 18px;
 }
 
-.color-dot-0 { color: $color0; }
-.color-dot-1 { color: $color1; }
-.color-dot-2 { color: $color2; }
-.color-dot-3 { color: $color3; }
-.color-dot-4 { color: $color4; }
-.color-dot-5 { color: $color5; }
-.color-dot-6 { color: $color6; }
-.color-dot-7 { color: $color7; }
-.color-dot-8 { color: $color8; }
-
-.panel-static-text-container {
-  font-size: 50px;
-  padding-right: 10px;
+.panel-headphone-widget-icon {
+    padding: 10px;
 }
